<resources>
    <string name="app_name">OMPlayer</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="library">Library</string>
    <string name="general_error_message">Something went wrong. Try again later</string>
    <string name="enter_username">Please enter your username to proceed</string>
    <string name="enter_password">Please enter your password to proceed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="register">Register.</string>
    <string name="scrobbling">Scrobbling</string>
    <string name="last_fm">Last.fm</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="playlists">Playlists</string>
    <string name="sync">Sync</string>
    <string name="playlist_rename">Rename</string>
    <string name="playlist_delete">Delete</string>
    <string name="playlist_tracklist_add">Add</string>
    <string name="playlist_tracklist_remove">Remove</string>
    <string name="last_fm_love">Love</string>
    <string name="last_fm_similar_tracks">Similar Tracks</string>
    <string name="last_fm_video">Video</string>
    <string name="track_added_to_loved">Track was added to loved successfully</string>
    <string name="tracks_similar_to">Tracks similar to:</string>
    <string name="similar_track_title">%1$s - %2$s</string>
    <string name="no_similar_tracks">No similar tracks were found</string>
    <string name="no_video">Video wasn\'t found</string>
    <string name="no_bookmarked_videos">You don\'t have any bookmarked videos</string>
    <string name="no_playlists">You don\'t have any playlists</string>
    <string name="no_playlist_songs">You don\'t have any songs in this playlist</string>
    <string name="match_percent">%s%%</string>
    <string name="hint_title">Title</string>
    <string name="enter_valid_playlist_title">Please enter a valid playlist title to continue</string>
    <string name="enter_new_playlist_title">Enter new playlist title</string>
    <string name="delete_playlist_prompt">Are you sure that you want to delete this playlist?</string>
    <string name="playlists_updated">The playlists were updated successfully</string>
    <string name="playlist_duplication">A playlist with the same title already exists</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="track_position">%s.</string>
    <string name="selected_playlists">Selected: %s</string>
</resources>